argocd/argocd-ingress-route.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    # spec.ingressClassName: traefik # This was an incorrect placement for ingressClassName
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serversscheme: h2c # Enable H2C for gRPC to the backend
spec:
  ingressClassName: traefik # Correct field for specifying the Ingress controller
  rules:
    - host: kube.local
      http:
        paths:
          - path: /argocd-server
            pathType: Prefix
            backend:
              service:
                name: argocd-server # Service in the same namespace as the Ingress (argocd)
                port:
                  number: 80 # Argo CD service HTTP port (when server.insecure: "true")
  tls:
    - hosts:
        - kube.local
